# movie-a

./: Dockerfile  README.md  data.sql  database.py  docker-compose.yaml  main.py  models.py  pages.py  pyproject.toml  sample_env.txt
api/: artist.py  comment.py  movie.py  role.py  user.py
crud/: artist.py  comment.py  movie.py  role.py  user.py
schemas/: artist.py  comment.py  movie.py  role.py  user.py
templates/: artist.html  base.html  directors.html  index.html
templates/components/: navbar.html
