[tool.poetry]
name = "movie-app"
version = "0.1.0"
description = "backend a movie app"
authors = ["ragav <ragavaraaj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.2"
fastapi = "^0.79.0"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.39"
psycopg2 = "^2.9.3"
Jinja2 = "^3.1.2"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
